<resources>
    <string name="app_name">unik</string>
    <!--    <string name="web_client_id">743790368946-go111gafm1ptfemgc7kuicmbqorrrklp.apps.googleusercontent.com</string>-->
    <string name="web_client_id">772868255924-9m917ooo4fvdpmii3k97fjh9rou9vlds.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_icon_description">login_icon</string>
    <string name="sign_in_forgot_password">Забыл пароль</string>
    <string name="sign_in_registry"> Регистрация</string>
    <string name="sign_in_not_acc">Нет аккаунта?</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_username">Имя пользователя</string>
    <string name="google_logo_text">google logo</string>
    <string name="sign_in_continue_google">Продолжить с Google</string>
    <string name="login_to_appname">Вход в Univer</string>
    <string name="sign_in_btn_continue">продолжить</string>
    <string name="registry_to_appname">Регистрация в Univer</string>
    <string name="sign_in_signup"> Войти</string>
    <string name="sign_in_have_acc">Зарегистрированы?</string>
    <string name="sign_in_phone">Телефон</string>
    <string name="sign_in_email">Email</string>
</resources>