<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".screens.fragments.auth.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:text="@string/login_to_appname"
                app:layout_constraintBottom_toTopOf="@id/login_btn_login_google"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/sign_in_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_btn_login_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:focusable="true"
                style="@style/sign_in_btn_google_container"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/login_google_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/sign_in_continue_google"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/login_google_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_google_logo"
                    android:contentDescription="@string/google_logo_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/login_btn_login_google"
                android:layout_marginTop="16dp" >

                <View
                    android:id="@+id/login_divider_first"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tv_or"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_divider_left" />


                <TextView
                    android:id="@+id/tv_or"
                    android:text="OR"
                    app:layout_constraintEnd_toStartOf="@+id/login_divider_second"
                    app:layout_constraintStart_toEndOf="@+id/login_divider_first"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText"
                    style="@style/style_divider_text" />


                <View
                    android:id="@+id/login_divider_second"
                    app:layout_constraintStart_toStartOf="@id/tv_or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_divider_right" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/login_ed_login_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_divider"
                style="@style/container_sign_in">

                <ImageView
                    android:id="@+id/login_email_icon"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_register_email"
                android:contentDescription="@string/login_icon_description" />

                <EditText
                    android:id="@+id/login_ed_login"
                    android:hint="@string/sign_in_email"
                    style="@style/app_edit_text_bold"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_ed_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_margin_top"
                android:layout_marginHorizontal="@dimen/login_margin_horizontal"
                android:elevation="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_ed_login_container">

                <ImageView
                    android:id="@+id/login_password_icon"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_password_icon"
                    android:contentDescription="icon password"
                    tools:ignore="HardcodedText" />

                <EditText
                    style="@style/app_edit_text_bold"
                    android:id="@+id/login_ed_password"
                    android:inputType="textPassword"
                    android:hint="@string/sign_in_password"
                    android:autofillHints="" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="@dimen/login_margin_horizontal"
                app:layout_constraintTop_toBottomOf="@id/login_ed_password_container"

                >

                <TextView
                    android:id="@+id/tv_not_acc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/sign_in_not_acc"
                    style="@style/text_style_small" />
                <TextView
                    android:id="@+id/login_tv_registry"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_not_acc"
                    android:text="@string/sign_in_registry"
                    android:layout_marginHorizontal="5dp"
                    style="@style/text_style_normal_primary" />
                <TextView
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/text_style_normal_primary"
                    android:text="@string/sign_in_forgot_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/login_btn_continue"
            android:text="@string/sign_in_btn_continue"
            style="@style/sign_in_btn_continue" />

    </RelativeLayout>
</ScrollView>